# thiep-cuoi

./: .all-contributorsrc  .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  normalize.rs  state.rs  util.rs
backend/src/routes/: invitations.rs  mod.rs  pages.rs  photos.rs  rsvps.rs  seating.rs  users.rs
backend/tests/: api.rs
docs/: MIGRATION.md
docs/research/: roadmap.md
docs/superpowers/plans/: 2026-06-25-astro-starwind-phase0-1.md  2026-06-25-astro-starwind-tools-content.md
docs/superpowers/specs/: 2026-06-21-thiep-cuoi-design.md  2026-06-24-astro-islands-migration-design.md  2026-06-25-astro-starwind-redesign-design.md  2026-06-30-build-first-register-later-design.md
frontend/: .gitignore  astro.config.mjs  package-lock.json  package.json  starwind.config.json  tsconfig.json
frontend/public/: sw.js
frontend/public/css/: base.css  invite.css  ornaments.css  (+1 more)
public/: 404.html  checklist.html  in.html  index.html  invite.html  mam-qua.html  manage.html  manifest.webmanifest  mau-thiep.html  ngan-sach.html  nghi-le.html  quyen-rieng-tu.html  sw.js  xem-ngay.html
public/css/: base.css  invite.css  ornaments.css  print-card.css
public/js/: checklist.js  editor.js  invite.js  lunar.js  mam-qua.js  manage.js  ngan-sach.js  nghi-le.js  print-card.js  vietqr.js  xem-ngay.js
src/: db.js  server.js
test/: e2e.js  load-umd.js  lunar.test.js  og-parity.mjs  pages-smoke.mjs  vietqr.test.js
(+59 files in other folders)
